fix: link align

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -6,6 +6,7 @@ body {
 
 a {
   display: inline-block;
+  text-align: left;
 
   color: var(--color-base);
   text-decoration: none;
